# if_projects

./: .gitignore  README.md  alembic.ini  classes.drawio  pyproject.toml
control_painel/: package.json
control_painel/src/: App.jsx
docs/: alter.md  classes.drawio
migrations/: env.py
migrations/versions/: 5d2193f37e53_first.py
tests/: test_tinto.py
tinto/: app.py  models.py  schemas.py  settings.py
