[project]
name = "tinto"
version = "0.1.0"
description = ""
authors = [
    {name = "V. Guilherme",email = "v.guilherme.barreto@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.0"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
exclude = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.git-rewrite',
    '.hg',
    '.ipynb_checkpoints',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.pyenv',
    '.pytest_cache',
    '.pytype',
    '.ruff_cache',
    '.svn',
    '.tox',
    '.venv',
    '.vscode',
    '__pypackages__',
    '_build',
    'buck-out',
    'build',
    'dist',
    'migrations',
    'node_modules',
    'site-packages',
    'venv'  
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev tinto/app.py --host 0.0.0.0'
pre_test = 'task lint'
test = 'pytest -s -x --cov=bordeux -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.1"
taskipy = "^1.14.1"

